[project]
name = "phillips-hue-mcp-server"
version = "0.1.0"
description = "An MCP server for controlling Philips Hue smart lighting through Claude."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.28.0"
]
authors = [
    {name = "Charles Bethin"}
]
keywords = ["claude", "mcp", "philips-hue", "smart-home", "lighting"]
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.hatch.metadata]
allow-direct-references = true
