[project]
name = "mcp-server-phillips-hue"
version = "0.1.0"
description = "A Model Context Protocol server for controlling Philips Hue smart lighting through LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Charles Bethin"}
]
keywords = ["mcp", "philips-hue", "smart-home", "lighting", "llm", "automation"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0"
]

[project.scripts]
mcp-server-phillips-hue = "server:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.hatch.build]
exclude = [
  "*.pyc",
  "__pycache__",
  ".git",
  ".venv"
]

[tool.hatch.metadata]
allow-direct-references = true
